// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filtered search token renders token and input with value in active mode 1`] = `
<div class="gl-filtered-search-token gl-filtered-search-token-active">
  <gl-token-stub viewonly="true" class="gl-filtered-search-token-type">
    testTitle
  </gl-token-stub>
  <gl-filtered-search-token-segment-stub options="[object Object],[object Object]" optiontextfield="value" custominputkeydownhandler="function () { [native code] }" value="=" view-only=""></gl-filtered-search-token-segment-stub>
  <gl-filtered-search-token-segment-stub active="true" optiontextfield="title" custominputkeydownhandler="() => () => false" value="test-value"></gl-filtered-search-token-segment-stub>
</div>
`;

exports[`Filtered search token renders tokens in inactive mode 1`] = `
<div class="gl-filtered-search-token">
  <gl-token-stub viewonly="true" class="gl-filtered-search-token-type">
    testTitle
  </gl-token-stub>
  <gl-filtered-search-token-segment-stub options="[object Object],[object Object]" optiontextfield="value" custominputkeydownhandler="function () { [native code] }" value="=" view-only=""></gl-filtered-search-token-segment-stub>
  <gl-filtered-search-token-segment-stub optiontextfield="title" custominputkeydownhandler="() => () => false" value="test-value"></gl-filtered-search-token-segment-stub>
</div>
`;
